<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar"
    >

    <!-- 01-1:图标 -->

    <RelativeLayout
        android:id="@+id/layout01_1"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:gravity="center">

        <!-- logo图标 -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@mipmap/logo"/>

    </RelativeLayout>

    <!-- 02-1:公司编号 -->


    <EditText
        android:id="@+id/et_storeId"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/login_store_bg"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/LoginActivity_companyNum"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/common_textSize_default14">
    </EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"/>
    <!-- 02-2:工号 -->
    <EditText
        android:id="@+id/et_UserNmae"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/login_work_bg"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/LoginActivity_employeeNum"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/common_textSize_default14"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"/>

    <!-- 02-3:密码 -->

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/login_psd_bg"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/LoginActivity_psd"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/common_textSize_default14"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_common_bg"
        android:text="@string/btn_Login"
        android:textColor="@color/btn_login_text_color"
        android:textSize="@dimen/common_textSize_default18"/>

</LinearLayout>
