<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar">

    <!-- actionBar -->

    <include layout="@layout/topbar_common_itt" />
    <!-- 修改密码 -->

    <LinearLayout
        android:id="@+id/btn_changePsd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_topbar_height"
        android:layout_marginTop="10dp"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:paddingLeft="20dp"
            android:text="@string/change_psd"
            android:textSize="@dimen/common_textSize_default16"
            android:textColor="@color/textColor" />
        <RelativeLayout
            android:layout_width="@dimen/common_topbar_width"
            android:layout_height="match_parent"
            >
        <Button
            android:layout_centerInParent="true"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:background="@mipmap/forword" />
        </RelativeLayout>
    </LinearLayout>
    <!-- 灰色横线 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="#9d9d9d" />
    <!-- 人脸登记 -->
    <LinearLayout
        android:id="@+id/btn_changeFace"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_topbar_height"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center_vertical|left"
            android:paddingLeft="20dp"
            android:text="@string/change_face"
             android:textSize="@dimen/common_textSize_default16"
            android:textColor="@color/textColor" />

        <RelativeLayout
            android:layout_width="@dimen/common_topbar_width"
            android:layout_height="match_parent"
            >
            <Button
                android:layout_centerInParent="true"
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:background="@mipmap/forword" />
        </RelativeLayout>
    </LinearLayout>

    <!-- 灰色横线 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="#9d9d9d" />
    <!-- 当前版本 -->

    <LinearLayout
        android:id="@+id/layout_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_topbar_height"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center_vertical|left"
            android:paddingLeft="20dp"
            android:text="@string/vission"
             android:textSize="@dimen/common_textSize_default16"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/common_topbar_height"
            android:layout_weight="0.2"
            android:id="@+id/tv_Version"
            android:gravity="center_vertical|left"
            android:text="1.0" 
            android:textSize="@dimen/common_textSize_default16"
            android:textColor="@color/textColor"
            />
    </LinearLayout>
    <!-- 灰色横线 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="#9d9d9d" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_style"
        android:layout_height="@dimen/common_topbar_height"
        android:text="@string/exist"
        android:textColor="@color/common_title_color"
        android:textSize="@dimen/common_textSize_default16" />

</LinearLayout>