<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/topbar_common_itt"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height40"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/at_EmployeeName"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.72"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height40"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/at_WrokId"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_workid"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.72"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height40"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/at_CompanyName"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_company"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.72"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height40"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/at_DepartmentName"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_department"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.72"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height40"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/at_EmployeeGender"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.72"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height40"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/at_CapTime"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_time"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.72"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height40"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/at_Score"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_score"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.72"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>

            <!--注册图-->
            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_org"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <!-- 抓拍图-->
            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_cap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>